# CubicalRipser2D

./: .travis.yml  AUTHORS.md  CMakeLists.txt  Cube2D.py  Cubical Ripser.ipynb  README.md  __init__.py  about.rst  conf.py  index.rst  setup.py
algorithms/CubicalRipser_2dim/src/: cubicalripser_2dim.cpp  cubicalripser_2dim.h  dense_cubical_grids.cpp  dense_cubical_grids.h  main.cpp
examples/.ipynb_checkpoints/: TDA Persistent Homology-checkpoint.ipynb
src/: Filter.cpp  Filter.h  bindings.cpp
